Remove endorsed libs from startup script for Java 11 compatibility