@@ -63,7 +63,6 @@ done
 cd "$AXIS2_HOME"
 
 java $JAVA_OPTS -classpath "$AXIS2_CLASSPATH" \
-    -Djava.endorsed.dirs="$AXIS2_HOME/lib/endorsed":"$JAVA_HOME/jre/lib/endorsed":"$JAVA_HOME/lib/endorsed" \
-    -Dderby.stream.error.file="$AXIS2_HOME/logs/derby.log" \
+     -Dderby.stream.error.file="$AXIS2_HOME/logs/derby.log" \
     org.apache.axis2.transport.SimpleAxis2Server \
     -repo "$AXIS2_HOME"/repository -conf "$AXIS2_HOME"/conf/axis2.xml $*
